--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,19 +27,19 @@
         </div>
         <div class="menubutton">
           <div class="menubuttonicon menubuttonnews"></div>
-          <div class="menubuttontext">Posts</div>
+          <div class="menubuttontext">News Feed</div>
         </div>
         <div class="menubutton">
           <div class="menubuttonicon menubuttonkit"></div>
-          <div class="menubuttontext">Request kit</div>
+          <div class="menubuttontext">Request Kit</div>
         </div>
         <div class="menubutton">
           <div class="menubuttonicon menubuttonexport"></div>
-          <div class="menubuttontext">Export data</div>
+          <div class="menubuttontext">Export Data</div>
         </div>
         <div class="menubutton">
           <div class="menubuttonicon menubuttonsignin"></div>
-          <div class="menubuttontext">Sign in</div>
+          <div class="menubuttontext">Sign In</div>
         </div>
       </div>
     </div>
