--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
     <div class="filterbutton icon4b rightedge"></div>
     <div class="filterbutton icon5b rightedge"></div>
     <div class="filterbutton icon6b rightedge"></div>
-    <div class="filterbutton icon6b"></div>
+    <div class="filterbutton iconstar"></div>
   </div>
 </div>
 <div id="fullpage">
