--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -135,16 +135,18 @@ body {
 
 // Main logo
 .logocontainer {
-  margin-left: 30px;
+  margin-left: 40px;
   margin-top: 20px;
 }
 
 .logotitle {
+  margin-top: 10px;
   font-size: 10pt;
   font-weight: bold;
 }
 
 .logosubtitle {
+  margin-top: 4px;
   font-size: 6pt;
   color: #000;
 }
@@ -419,6 +421,7 @@ nav {
   width: 460px;
   min-height: 100px;
   font-size: 10pt;
+  font-family: 'verdana', sans-serif;
   resize: vertical;
   border: 1px solid $color-primary;
   box-sizing: border-box;
@@ -885,4 +888,99 @@ nav {
 .loginlink a:hover{
   color: #0088FF;
 
+}
+
+#kitvideo {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.requestkitoverlay {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 1200;
+}
+
+.requestkitcontainer {
+  width: 500px;
+  min-height: 40px;
+  background-color: #FFF;
+  margin-left: 20px;
+  margin-top:200px;
+  border: 2px solid $color-primary;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.requestkitbutton {
+  background-color: $color-primary;
+  color: #FFF;
+  padding-top: 10px;
+  font-size: 16pt;
+  font-weight: bold;
+  cursor: pointer;
+  height: 40px;
+}
+
+.requestkitform {
+  display: none;
+}
+
+.formrow {
+  border-bottom: 2px solid $color-primary;
+  text-align: left;
+  color: #000;
+  font-size: 12pt;
+  padding: 14px;
+}
+
+.kitsubmit {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  margin-bottom: 40px;
+  background: image-url("button/submit.png") no-repeat;
+  cursor:pointer;
+  width: 54px;
+  height: 54px;
+  border: none;
+}
+
+.kitformbigtext {
+  font-weight: bold;
+  font-size: 14pt;
+  padding: 14px;
+}
+
+#slider {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#amount {
+  font-size: 14pt;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#exportdataimg {
+  position: absolute;
+  top: 200px;
+  left: 30px;
+  z-index: 1200;
+  background-color: #FFF;
+  padding: 20px;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+#showreel {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0px;
+  left: 0px;
 }
