--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -871,7 +871,7 @@ nav {
 }
 
 .loginform {
-  margin-top:300px;
+  margin-top:60px;
 }
 
 .loginlink li{
@@ -983,4 +983,22 @@ nav {
   width: 100%;
   top: 0px;
   left: 0px;
+}
+
+.signinpanel {
+  width: 500px;
+  position: absolute;
+  top: 200px;
+  left: 30px;
+  background-color: #FFF;
+  padding: 20px;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+#flashContent {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: -140px;
 }
