--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,41 @@
   <div class="boxpanel">
     <div class="box" id="boxmission">
       <div class="textbox">
-      <%= image_tag("test/mission.png")%>
+        <div id="flashContent">
+          <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="100%" height="100%" id="Quadrop" align="left">
+            <param name="movie" value="Quadrop.swf" />
+            <param name="quality" value="high" />
+            <param name="bgcolor" value="#ffffff" />
+            <param name="play" value="true" />
+            <param name="loop" value="true" />
+            <param name="wmode" value="direct" />
+            <param name="scale" value="showall" />
+            <param name="menu" value="true" />
+            <param name="devicefont" value="false" />
+            <param name="salign" value="" />
+            <param name="allowScriptAccess" value="sameDomain" />
+            <!--[if !IE]>-->
+            <object type="application/x-shockwave-flash" data="Quadrop.swf" width="100%" height="100%">
+              <param name="movie" value="Quadrop.swf" />
+              <param name="quality" value="high" />
+              <param name="bgcolor" value="#ffffff" />
+              <param name="play" value="true" />
+              <param name="loop" value="true" />
+              <param name="wmode" value="direct" />
+              <param name="scale" value="showall" />
+              <param name="menu" value="true" />
+              <param name="devicefont" value="false" />
+              <param name="salign" value="" />
+              <param name="allowScriptAccess" value="sameDomain" />
+              <!--<![endif]-->
+              <a href="http://www.adobe.com/go/getflash">
+                <img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" />
+              </a>
+              <!--[if !IE]>-->
+            </object>
+            <!--<![endif]-->
+          </object>
+        </div>
       </div>
     </div>
     <div class="box" id="boxnewsfeed">
@@ -48,7 +82,7 @@
     </div>
     <div class="box" id="boxsignin">
 
-      <div class="singlepanel">
+      <div class="signinpanel">
 
         <%= render 'layouts/session' %>
       </div>
