--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,5 +2,6 @@
 <ul class="users">
 
 <%= link_to @user.email, @user %> signed up <%= @user.created_at.to_date %>
+  <%= link_to 'Sign out', destroy_user_session_path, :method => :delete %>
 
 </ul>
