Remove navigation dots

--- a/app/assets/javascripts/homemap.js.erb
+++ b/app/assets/javascripts/homemap.js.erb
@@ -201,7 +201,7 @@ function setupNavLinkClick(){
                     resizeBoxOverlay();
                     $('#fullpage').fullpage(
                             {verticalCentered:false,
-                                navigation:true,
+                                navigation:false,
                                 normalScrollElements: '#map-canvas, .scrollpanel',
                                 scrollOverflow: true,
                                 afterLoad: renderPostGraph,
